# universal-algorithmic-oracle

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  python_divination_libraries.md  requirements.txt  run_full_test.py  run_integration_test.py  test_full_integration.py  طرح نهایی الگریتم پیشگو.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
config/: evolution.yaml  fitness.yaml  settings.yaml  systems.yaml
experiments/: run_experiment.py  setup_experiments.py
experiments/data/: baseline_dataset.json  metadata.json  timeseries_dataset.json
experiments/results/: experiment_20260622_025519.json
notebooks/: 01_systems_overview.py  02_evolution_demo.py  03_fusion_analysis.py  04_island_model_demo.py
oracle/: __init__.py  config_validator.py  logging_config.py  sanitizer.py
oracle/analysis/: __init__.py  antropy_analysis.py  astropy_analysis.py  bayesian_network.py  bnlearn_analysis.py  causal_analysis.py  causal_discovery.py  causallearn_analysis.py  community_analysis.py  constraint_analysis.py  entropy_analyzer.py  fractal_analysis.py  igraph_metrics.py  infomap_analysis.py  infomeasure_analysis.py  infrastructure_utils.py  logic_constraints.py  nfoursid_analysis.py  nolds_analysis.py  numdifftools_analysis.py  onnx_analysis.py  pgmpy_analysis.py  pysr_analysis.py  regime_detector.py  sem_analysis.py  stats_analysis.py  wavelet_analyzer.py  xgboost_analysis.py
oracle/entropy/: __init__.py  bitstream.py  calendar_entropy.py  encoder.py  hashing.py  symbolic_matrix.py
oracle/evaluation/: __init__.py  advanced_stats.py  anomaly_detector.py  benchmark.py  chaos_analysis.py  coherence.py  complexity.py  convergence.py  correlation.py  external_trials.py  fitness.py  historical_blind_test.py  moocore_wrapper.py  pure_entropy_test.py  stability.py  sympy_wrapper.py
oracle/evolution/: __init__.py  adaptive_rates.py  community_detection.py  crossover.py  deap_engine.py  deep_mutation.py  diversity_controller.py  expansion.py  gp_engine.py  graph_analysis.py  graph_predictor.py  meta_selector.py  mutation.py  neural_evaluator.py  novelty.py  nsga_engine.py  optuna_optimizer.py  parallel_evaluator.py  population.py  progressive_difficulty.py  pruning.py  quality_diversity.py  rule_invention.py  selection.py
tests/: integration_report.json  test_advanced.py  test_all.py  test_analysis.py  test_crossover.py  test_design_doc_modules.py  test_entropy.py  test_fitness.py  test_genome.py  test_infrastructure.py  test_integration.py  test_memory.py  test_mutation.py  test_new_engines.py  test_new_install_wrappers.py  test_new_wrappers.py  test_registry.py  test_remaining_wrappers.py  test_wrappers.py
(+213 files in other folders)
